--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  clientid: 1
-  projectid: 1
+  client_id: 1
+  project_id: 1
   date: 2014-01-13
   worktype: MyString
   cost: 1.5
@@ -12,8 +12,8 @@ one:
   description: MyText
 
 two:
-  clientid: 1
-  projectid: 1
+  client_id: 1
+  project_id: 1
   date: 2014-01-13
   worktype: MyString
   cost: 1.5
