--- a/config/aws.yml
+++ b/config/aws.yml
@@ -2,6 +2,10 @@ development:
   access_key_id: <%= ENV["aws_s3_key_id"] %>
   secret_access_key: <%= ENV["aws_s3_secret"] %>
   bucket: SeferBiz
+test:
+  access_key_id: <%= ENV["aws_s3_key_id"] %>
+  secret_access_key: <%= ENV["aws_s3_secret"] %>
+  bucket: SeferBiz
 production:
   access_key_id: <%= ENV["aws_s3_key_id"] %>
   secret_access_key: <%= ENV["aws_s3_secret"] %>
