Fixed aws temporarily

--- a/config/aws.yml
+++ b/config/aws.yml
@@ -1,12 +1,15 @@
 development:
   access_key_id: <%= ENV["aws_s3_key_id"] %>
   secret_access_key: <%= ENV["aws_s3_secret"] %>
+  region: <%= ENV["aws_region"] %>
   bucket: SeferBiz
 test:
   access_key_id: <%= ENV["aws_s3_key_id"] %>
   secret_access_key: <%= ENV["aws_s3_secret"] %>
+  region: <%= ENV["aws_region"] %>
   bucket: SeferBiz
 production:
   access_key_id: <%= ENV["aws_s3_key_id"] %>
   secret_access_key: <%= ENV["aws_s3_secret"] %>
+  region: <%= ENV["aws_region"] %>
   bucket: SeferBiz
