--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,8 +8,8 @@ server {
 
   server_name biz.seferdesign.com;
 
-  #ssl_certificate /etc/letsencrypt/live/biz.seferdesign.com/fullchain.pem;
-  #ssl_certificate_key /etc/letsencrypt/live/biz.seferdesign.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/biz.seferdesign.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/biz.seferdesign.com/privkey.pem;
 
   root /home/deploy/apps/seferbiz/current/public;
   access_log /home/deploy/apps/seferbiz/current/log/nginx.access.log;
