--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ config/secrets.yml
 # Ignore application configuration
 /config/google.json
 /config/application.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
