--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,4 +1,4 @@
-upstream puma_seferbiz {
+upstream puma {
   server unix:///home/deploy/apps/seferbiz/shared/tmp/sockets/seferbiz-puma.sock;
 }
 
@@ -21,14 +21,14 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @puma_seferbiz;
-  location @puma_seferbiz {
+  try_files $uri/index.html $uri @puma;
+  location @puma {
     proxy_set_header X-Forwarded-Proto https;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
-    proxy_pass http://puma_seferbiz;
+    proxy_pass http://puma;
   }
 
   error_page 500 502 503 504 /500.html;
